packages/client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .scrollbar::-webkit-scrollbar {
    width: 20px;
    height: 20px;
  }

  .scrollbar::-webkit-scrollbar-track {
    border-radius: 10px;
  }

  .scrollbar::-webkit-scrollbar-thumb {
    background: #6b7280;
    border-right: 6px solid #334155;
    border-left: 6px solid #334155;
  }

  .scrollbar::-webkit-scrollbar-thumb:hover {
    background: #4b5563;
  }

  .leaflet-container {
    width: 100vw;
    height: 100vh;
  }

  .sidebar-icon {
    @apply bg-gray-700 w-12 h-12 mt-3 text-white shadow-xl rounded items-center relative flex justify-center hover:text-teal-400
  }

  .sidebar-tooltip {
    @apply bg-gray-700 scale-0 inline-block absolute w-auto p-3 m-3 min-w-max left-12 rounded shadow-xl text-white font-mono transition-none origin-left
  }
}

